[gd_scene load_steps=34 format=2]

[ext_resource path="res://player/player_fase4/top_down_F4/player_top_down4.gd" type="Script" id=1]
[ext_resource path="res://player/player_fase4/top_down_F4/atack_animation/atack0019.png" type="Texture" id=2]
[ext_resource path="res://player/player_fase4/top_down_F4/atack_animation/atack0015.png" type="Texture" id=3]
[ext_resource path="res://player/player_fase4/top_down_F4/atack_animation/atack0016.png" type="Texture" id=4]
[ext_resource path="res://player/player_fase4/top_down_F4/atack_animation/atack0017.png" type="Texture" id=5]
[ext_resource path="res://player/player_fase4/top_down_F4/atack_animation/atack0018.png" type="Texture" id=6]
[ext_resource path="res://player/player_fase4/top_down_F4/death_animation/death0022.png" type="Texture" id=7]
[ext_resource path="res://player/player_fase4/top_down_F4/death_animation/death0023.png" type="Texture" id=8]
[ext_resource path="res://player/player_fase4/top_down_F4/death_animation/death0024.png" type="Texture" id=9]
[ext_resource path="res://player/player_fase4/top_down_F4/death_animation/death0025.png" type="Texture" id=10]
[ext_resource path="res://player/player_fase4/top_down_F4/death_animation/death0026.png" type="Texture" id=11]
[ext_resource path="res://player/player_fase4/top_down_F4/death_animation/death0027.png" type="Texture" id=12]
[ext_resource path="res://player/player_fase4/top_down_F4/idlle_animation/idle0000.png" type="Texture" id=13]
[ext_resource path="res://player/player_fase4/top_down_F4/walk_animation/walk0003.png" type="Texture" id=14]
[ext_resource path="res://player/player_fase4/top_down_F4/walk_animation/walk0004.png" type="Texture" id=15]
[ext_resource path="res://player/player_fase4/top_down_F4/walk_animation/walk0005.png" type="Texture" id=16]
[ext_resource path="res://player/player_fase4/top_down_F4/walk_animation/walk0006.png" type="Texture" id=17]
[ext_resource path="res://player/player_fase4/top_down_F4/walk_animation/walk0007.png" type="Texture" id=18]
[ext_resource path="res://player/player_fase4/top_down_F4/walk_animation/walk0008.png" type="Texture" id=19]
[ext_resource path="res://player/player_fase4/top_down_F4/walk_animation/walk0009.png" type="Texture" id=20]
[ext_resource path="res://player/player_fase4/top_down_F4/walk_animation/walk0010.png" type="Texture" id=21]
[ext_resource path="res://audio_geral/efeitos_protagonista/fase2/Caminhando em SÃ³lido.wav" type="AudioStream" id=22]
[ext_resource path="res://audio_geral/efeitos_protagonista/fase2/Ataque Protagonista.wav" type="AudioStream" id=23]
[ext_resource path="res://audio_geral/efeitos_protagonista/fase1/Protagonista levando dano.wav" type="AudioStream" id=24]
[ext_resource path="res://audio_geral/efeitos_protagonista/fase4/Thompson.wav" type="AudioStream" id=25]

[sub_resource type="CircleShape2D" id=1]
radius = 37.2308

[sub_resource type="Animation" id=2]
resource_name = "atack_animation"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/sprite_player:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("arma_player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 86.7179, -5.43114 ), Vector2( 73.2195, 14.0779 ), Vector2( 57.8302, 26.3299 ), Vector2( -3, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("animation_player:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("som_passos:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("som_ataque:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "death_animation"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/sprite_player:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.9, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("som_passos:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "idlle_animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/sprite_player:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("arma_player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("som_passos:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/sprite_player:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("arma_player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("som_passos:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 24.177
height = 9.646

[sub_resource type="CapsuleShape2D" id=7]
height = 236.874

[sub_resource type="CircleShape2D" id=8]
radius = 40.1302

[node name="player_top_down_F4" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( -15.4381, -29.8786 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"player",
]]
shape = SubResource( 1 )
one_way_collision = true

[node name="sprite_player" type="Sprite" parent="CollisionShape2D"]
position = Vector2( 0.33333, 2 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="animation_player" type="AnimationPlayer" parent="."]
playback_speed = 1.2
anims/atack_animation = SubResource( 2 )
anims/death_animation = SubResource( 3 )
anims/idlle_animation = SubResource( 4 )
anims/walk_animation = SubResource( 5 )

[node name="arma_player" type="Area2D" parent="." groups=[
"arma_player",
]]
editor/display_folded = true
position = Vector2( -3, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="arma_player" groups=[
"arma_player",
]]
modulate = Color( 0.14902, 0.988235, 0.0313726, 1 )
shape = SubResource( 6 )

[node name="visibility_bullet" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="visibility_bullet"]
position = Vector2( 79.0632, -0.568787 )
shape = SubResource( 7 )

[node name="area_corpo_player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_corpo_player"]
position = Vector2( 1.67247, 2.0906 )
shape = SubResource( 8 )

[node name="position_bullet" type="Position2D" parent="."]
position = Vector2( 43.9913, 29.9651 )

[node name="position_bullet_final" type="Position2D" parent="."]
position = Vector2( 2000.89, 29.7482 )

[node name="delay_metralhadora" type="Timer" parent="."]
wait_time = 0.1

[node name="som_passos" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -10.0
pitch_scale = 1.2

[node name="som_ataque" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -10.0
pitch_scale = 0.8

[node name="som_dano" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -10.0
pitch_scale = 1.2

[node name="som_arma" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -5.0
[connection signal="animation_finished" from="animation_player" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="arma_player" to="." method="_on_arma_player_body_entered"]
[connection signal="area_entered" from="area_corpo_player" to="." method="_on_area_corpo_player_area_entered"]
[connection signal="timeout" from="delay_metralhadora" to="." method="_on_delay_metralhadora_timeout"]
